# tpsa_sym

./: CMakeLists.txt  README.md  _config.yml
.github/: CONTRIBUTING.md
.github/workflows/: doxygen.yml  draft-pdf.yml  jekyll.yml
doc/: Doxyfile
doc/doxygen/html/: annotated.html  annotated_dup.js  class_symb_t_p_s_a_1_1_a_d_order_table-members.html  class_symb_t_p_s_a_1_1_a_d_order_table.html  class_symb_t_p_s_a_1_1_a_d_order_table.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  menudata.js  namespace_symb_d_a.html  namespace_symb_d_a.js  namespace_symb_t_p_s_a.html  namespace_symb_t_p_s_a.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  navtreeindex1.js  navtreeindex2.js  sda_8cc.html  sda_8cc.js  sda_8h.html  sda_8h.js  sda_8h_source.html  struct_symb_d_a_1_1_base-members.html  struct_symb_d_a_1_1_base.html  (+20 more)
doc/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  (+13 more)
examples/: example1.cc  example_1_fundamental.cc  example_2_eval.cc  example_3_eval_funs.cc
include/: da.h  sda.h  symbolic.h  tpsa.h  tpsa_extend.h
paper/: paper.bib  paper.md
src/: da.cc  sda.cc  symbolic.cc  tpsa.cpp  tpsa_extend.cc
tests/: tests.cc
